apps/rallly/deployment-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rallly-db
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rallly-db
  template:
    metadata:
      labels:
        app: rallly-db
    spec:
      securityContext:
        fsGroup: 999
      containers:
        - name: postgres
          image: postgres:18.6
          ports:
            - containerPort: 5432
          readinessProbe:
            exec:
              command: ["pg_isready", "-U", "postgres"]
            initialDelaySeconds: 5
            periodSeconds: 5
          volumeMounts:
            - name: db-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: rallly-db-data
