apps/rallly/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rallly
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rallly
  template:
    metadata:
      labels:
        app: rallly
    spec:
      containers:
        - name: rallly
          image: lukevella/rallly:4.15.3
          ports:
            - containerPort: 3000
