apps/rallly/service-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: rallly-db
  namespace: default
spec:
  selector:
    app: rallly-db
  ports:
    - port: 5432
      targetPort: 5432
