apps/rallly/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rallly
  namespace: default
spec:
  selector:
    app: rallly
  ports:
    - port: 3000
      targetPort: 3000
